tests/compile-fail/ident_disambiguation/unhandled_cyrillic.rs
fn main() {
    try_match::try_match!(42, привет);
}
